[project]
name = "guttertheory-backend"
version = "0.1.0"
description = "Real-time backend for GutterTheory"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "orjson>=3.9.0",
]

[project.optional-dependencies]
prod = ["uvloop>=0.19.0"]

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
